--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -5,6 +5,7 @@
 {#{% block extrahead %}#}
 {#{% endblock %}#}
 
+{% block header_time %}{% endblock %}
 
 {# Additional CSS includes #}
 {#{% block extrastyle %}#}
