--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,9 +1,12 @@
 {% extends "admin/base.html" %}
-{% load admin_static %}
 
 {# Additional <head> content here, some extra meta tags or favicon #}
-{#{% block extrahead %}#}
-{#{% endblock %}#}
+{% block extrahead %}
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript">
+        google.load("visualization", "1", {packages:["corechart"]});
+    </script>
+{% endblock %}
 
 {% block header_time %}{% endblock %}
 
@@ -15,7 +18,10 @@
 
 {# Additional JS files in footer, right before </body> #}
 {#{% block extrajs %}#}
-{#  <script type="text/javascript" src="{% static 'js/my_project.js' %}"></script>#}
+{#    <script type="text/javascript" src="https://www.google.com/jsapi"></script>#}
+{#    <script type="text/javascript">#}
+{#        google.load("visualization", "1", {packages:["corechart"]});#}
+{#    </script>#}
 {#{% endblock %}#}
 
 
